[package]
name = "pdfx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
pdf-extract = "0.7"
clap = "4.5.39"
winapi = { version = "0.3", features = ["winuser", "wincon"] }
