[package]
name = "pdfx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde_json = "1.0.140"
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
pdf-extract = "0.9"
clap = "4.5.40"

[profile.release]
opt-level = 3         
lto = "fat"             # Full Link-Time Optimization (very slow compile, very fast binary)
codegen-units = 1       # Forces single-threaded codegen to enable more cross-function optimization
panic = "abort"         # Remove panic overhead; reduces binary size, but no backtraces or unwinding
incremental = false     # Avoids caching between builds for slightly better final optimization
strip = "symbols"       # Strip debug symbols (can be "none", "debuginfo", or "symbols")